--- a/index.html
+++ b/index.html
@@ -64,12 +64,18 @@
 		<a href="SideBar Navigation/index.html">Sidebar </a>
 	</li>
 	<li>
-		<a href="Exam-First website/index.html">Exam-First website</a>
-	</li>
-	<li>
 		<a href="JS-Типи даних та оператори/index.html">JS-Типи даних та оператори</a>
 	</li>
 
+</ul>
+
+<ul>
+	<li>
+		<a href="Exam-First website/index.html">Exam-First website</a>
+	</li>
+	<li>
+		<a href="Monticello/index.html">Exam-Second website</a>
+	</li>
 </ul>
 
 </html>
