add canges monticello

--- a/Monticello/index.html
+++ b/Monticello/index.html
@@ -125,7 +125,7 @@
 
 	</header>
 
-<main id="">
+<main id="main">
 		
 			<!-- First SCREEN -->
 	
@@ -241,23 +241,23 @@
 			<div id="selector" class="gallery-items">
 				
 				<div class="item-gallery first-img lazy" data-src="assets/images/G1-min.jpg">
-						<img src="assets/images/G1-min.jpg" alt="">
+						<img data-src="assets/images/G1-min.jpg" src="data:image/gif;base64,R0lGODlhAwACAIAAAP///wAAACH5BAEAAAEALAAAAAADAAIAAAICjF8AOw=="  class="lazy" alt="image">
 						<span class="icon-zoom icon"></span>
 				</div>
 				<div class="item-gallery lazy" data-src="assets/images/G2-min.jpg">
-					<img src="assets/images/G2-min.jpg" alt="">
+					<img data-src="assets/images/G2-min.jpg" src="data:image/gif;base64,R0lGODlhAwACAIAAAP///wAAACH5BAEAAAEALAAAAAADAAIAAAICjF8AOw=="  class="lazy" alt="image">
 					<span class="icon-zoom icon"></span>
 				</div>
 				<div class="item-gallery lazy" data-src="assets/images/G3-min.jpg">
-				<img src="assets/images/G3-min.jpg" alt="">
-				<span class="icon-zoom icon"></span>
+					<img data-src="assets/images/G3-min.jpg" src="data:image/gif;base64,R0lGODlhAwACAIAAAP///wAAACH5BAEAAAEALAAAAAADAAIAAAICjF8AOw==" class="lazy" alt="image">
+					<span class="icon-zoom icon"></span>
 				</div>
 				<div class="item-gallery lazy" data-src="assets/images/G4-min.jpg">
-				<img src="assets/images/G4-min.jpg" alt="">
-				<span class="icon-zoom icon"></span>
+					<img data-src="assets/images/G4-min.jpg" src="data:image/gif;base64,R0lGODlhAwACAIAAAP///wAAACH5BAEAAAEALAAAAAADAAIAAAICjF8AOw==" class="lazy" alt="image">
+					<span class="icon-zoom icon"></span>
 				</div>
 				<div class="item-gallery lazy" data-src="assets/images/G5-min.jpg">
-					<img src="assets/images/G5-min.jpg" alt="">
+					<img data-src="assets/images/G5-min.jpg" src="data:image/gif;base64,R0lGODlhAwACAIAAAP///wAAACH5BAEAAAEALAAAAAADAAIAAAICjF8AOw==" class="lazy" alt="image">
 					<span class="icon-zoom icon"></span>
 				</div>
 				
