add changes response for monticello

--- a/Monticello/index.html
+++ b/Monticello/index.html
@@ -107,7 +107,9 @@
 							
 				<ul class="header-social social" itemscope itemtype="http://schema.org/SiteNavigationElement">
 					<li>
-						<a itemprop="url" href="#" ><span class="icon-fb icon"></span></a>
+						<a itemprop="url" href="#" tittle="facebook">
+							<span class="icon-fb icon"></span>
+						</a>
 					</li>
 					<li>
 						<a itemprop="url" href="#" >
@@ -115,7 +117,7 @@
 						</a>
 					</li>
 					<li>
-						<a itemprop="url" href="#" >
+						<a itemprop="url" href="#" title="instagram">
 							<span class="icon-instagram icon"></span>
 						</a>
 					</li>
@@ -332,7 +334,8 @@
 			</div>
 			<ul class="footer-social social" itemscope itemtype="http://schema.org/SiteNavigationElement">
 				<li>
-					<a itemprop="url" href="#">
+					<a itemprop="url" href="#" title="facebook">
+						<!-- додати title="" -->
 						<span class="icon-fb icon"></span>
 					</a>
 				</li>
@@ -342,7 +345,7 @@
 					</a>
 				</li>
 				<li>
-					<a itemprop="url" href="#">
+					<a itemprop="url" href="#" title="instagram">
 						<span class="icon-instagram icon"></span>
 					</a>
 				</li>
